= Changelog
:toc:

Generated from git history at 2026-01-20 15:25:06

== Features

* 2026-01-20 - *infra:* implement requirements workflow and changelog generation ({commit[:hash]})
