@@ -14,7 +14,7 @@
 ****
 *Description:* The system should generate AsciiDoc include files from the CSV source.
 +
-image::assets/requirements/architecture.png[architecture.png,300]
+image::../data/assets/requirements/architecture.png[architecture.png,300]
 +
 *Refers To:* <<SYS-001>>
 *Priority:* High | *Status:* Proposed
